--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -1,12 +1,10 @@
-name: Initialize Submodules
+name: Init & Push Submodules
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:  # Allows you to trigger it manually too
+  workflow_dispatch:
 
 jobs:
-  update-submodules:
+  push-submodules:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,8 +12,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: List submodules to confirm
+      - name: Configure Git
         run: |
-          echo "Submodules initialized:"
-          git submodule status
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Update and commit submodules
+        run: |
+          git submodule update --init --recursive
+          git add termux-x11/src/main/cpp/*
+          git diff --cached --quiet || git commit -m "Auto: Add submodule commit references"
+
+      - name: Push changes
+        run: git push
