--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           mkdir -p termux-x11/src/main/cpp
           git submodule update --init --recursive
-          git add termux-x11/src/main/cpp/*
+          git add termux-x11/src/main/cpp/
           git diff --cached --quiet || git commit -m "Auto: Add submodule commit references"
 
       - name: Push changes
