--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Commit submodule references
         run: |
+          git pull
           git add termux-x11/src/main/cpp
           git pull --rebase origin main || true
           git commit -m "Auto: Add submodule commit references"
