--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -24,8 +24,10 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
-      - name: Pull with rebase
+      - name: Pull with rebase (force clean)
         run: |
+          git reset --hard       # Discard local changes (e.g., gradlew.bat)
+          git clean -fd          # Remove untracked files/folders if any
           git fetch origin
           git checkout main
           git branch --set-upstream-to=origin/main main
