--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -1,4 +1,4 @@
-name: Init & Push Submodules
+name: Copy Files from Another Repo
 
 on:
   workflow_dispatch:
@@ -7,43 +7,32 @@ permissions:
   contents: write
 
 jobs:
-  push-submodules:
+  fetch-and-commit:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo with submodules
+      - name: Checkout this repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          submodules: recursive
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Configure Git identity and remote
+      - name: Fetch folder from external repo
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          mkdir -p termux-x11/src/main
+          git clone --depth=1 --filter=blob:none --sparse https://github.com/jiaxinchen-max/termux-app temprepo
+          cd temprepo
+          git sparse-checkout set termux-x11/src/main/cpp
+          cp -r termux-x11/src/main/cpp ../termux-x11/src/main/
+          cd ..
+          rm -rf temprepo
 
-      - name: Pull with rebase (force clean)
+      - name: Commit and push changes
         run: |
-          git reset --hard       # Discard local changes (e.g., gradlew.bat)
-          git clean -fd          # Remove untracked files/folders if any
-          git fetch origin
-          git checkout main
-          git branch --set-upstream-to=origin/main main
-          git pull --rebase origin main
-
-      - name: Init submodules and prepare folders
-        run: |
-          git submodule update --init --recursive
-          mkdir -p termux-x11/src/main/cpp
-
-      - name: Stage, commit and push if needed
-        run: |
-          git add termux-x11/src/main/cpp || true
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add termux-x11/src/main/cpp
           if git diff --cached --quiet; then
             echo "✅ No changes to commit"
           else
-            git commit -m "Auto: Add submodule commit references"
-            git push origin main
-          fi
+            git commit -m "Update cpp folder from external repo"
+            git push
