--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           ls
           mkdir -p termux-x11/src/main
-          git clone --depth=1 --filter=blob:none --sparse https://github.com/jiaxinchen-max/termux-app temprepo
+          git clone -b master-x11-submodule https://github.com/jiaxinchen-max/termux-app temprepo
+          #git clone --depth=1 --filter=blob:none --sparse https://github.com/jiaxinchen-max/termux-app temprepo
           
           cd temprepo
           git sparse-checkout set termux-x11/src/main/cpp
