--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -31,8 +31,11 @@ jobs:
       - name: Fetch folder from external repo
         run: |
           ls
-          mkdir -p termux-x11/src/main
+          mkdir -p termux-x11/src/main/cpp
           git clone -b master-x11-submodule https://github.com/jiaxinchen-max/termux-app temprepo
+          cd temprepo
+          ls
+          git submodule update --init --recursive
           #git clone --depth=1 --filter=blob:none --sparse https://github.com/jiaxinchen-max/termux-app temprepo
           
           cd temprepo
