--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -35,12 +35,14 @@ jobs:
           git clone -b master-x11-submodule https://github.com/jiaxinchen-max/termux-app temprepo
           cd temprepo
           ls
+           
           git submodule update --init --recursive
           #git clone --depth=1 --filter=blob:none --sparse https://github.com/jiaxinchen-max/termux-app temprepo
           
           #cd temprepo
           git sparse-checkout set termux-x11/src/main/cpp
           ls termux-x11/src/main/cpp
+          rm -rf ../termux-x11/src/main/cpp/*
           cp -r termux-x11/src/main/cpp ../termux-x11/src/main/
           cd ..
           rm -rf temprepo
@@ -49,8 +51,8 @@ jobs:
         run: |
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
-         git add termux-x11/src/main/cpp
-         
-         git commit -m "Update cpp folder from external repo"
+         git add termux-x11/src/main/cpp         
+         git commit -m "Update cpp full v5"
+         sleep 2
          git push
          
