--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -52,14 +52,14 @@ jobs:
           echo "Building APKs for ${APK_VERSION_TAG} release"
           ./gradlew assembleDebug
 
-          echo "Validating APKs"
-          for abi in universal arm64-v8a armeabi-v7a x86_64 x86; do
-            if ! test -f "${APK_DIR_PATH}/${APK_BASENAME_PREFIX}_${abi}.apk"; then
-              echo "APK not found: ${APK_DIR_PATH}/${APK_BASENAME_PREFIX}_${abi}.apk"
-              ls ./app/build/outputs/apk/debug
-              exit 1
-            fi
-          done
+          echo "Found XoDos APKs:"
+          ls -la ./app/build/outputs/apk/debug/*.apk
+          if ls ./app/build/outputs/apk/debug/*universal.apk 1> /dev/null 2>&1; then
+          echo "Universal APK found"
+          else
+          echo "::error::Universal APK not found!"
+          exit 1
+          fi
 
       - name: Upload APKs to GitHub artifact
         uses: actions/upload-artifact@v4
